@@ -1,7 +1,8 @@
 
 .NOTPARALLEL:
 
-EXTRA_DIST = md5sum.sh nfdump-bugs.patch nfdump-thread.patch check_items_map.pl bootstrap prepare-nfdump.sh nfdump
+#EXTRA_DIST = md5sum.sh nfdump-bugs.patch nfdump-thread.patch check_items_map.pl bootstrap prepare-nfdump.sh nfdump
+EXTRA_DIST = bootstrap nfdump
 
 
 SUBDIRS = src include bin examples 
