@@ -69,7 +69,7 @@ int cmp(element *a, element *b) {
  * 
  *     list = listsort(mylist);
  */
-hash_table_row_hdr_t * list_sort(hash_table_row_hdr_t  *list, heap_sort_callback_t callback, void *opts) {
+hash_table_row_hdr_t * list_sort(hash_table_row_hdr_t  *list, list_sort_callback_t callback, void *opts) {
     hash_table_row_hdr_t *p, *q, *e, *tail, *oldhead;
     int insize, nmerges, psize, qsize, i;
 
